# pa_municipal_annual_financial_report_scraper

./: .env  ENV.md  Joined pop class urban rural.xlsx  JsonCache.py  NOTES.md  README.md  TODO.md  alembic.ini  cache.json  config.py  constants.py  get_csv_diff.py  main.py  pyproject.toml  report.xlsx  requirements.txt
conversion/: main.py
database_logic/: DatabaseManager.py  build_intermediate_table.py  database_objects.py  models.py
db/: DatabaseManager.py  build_intermediate_table.py  client.py  convert.py
downloads/: report_ALLEGHENY_ALEPPO TWP_2015.xlsx  report_ALLEGHENY_ALEPPO TWP_2016.xlsx  report_ALLEGHENY_ALEPPO TWP_2017.xlsx  report_ALLEGHENY_ALEPPO TWP_2018.xlsx  report_ALLEGHENY_ALEPPO TWP_2019.xlsx  report_ALLEGHENY_ALEPPO TWP_2020.xlsx  report_ALLEGHENY_ALEPPO TWP_2021.xlsx  report_ALLEGHENY_ALEPPO TWP_2022.xlsx  report_ALLEGHENY_ALEPPO TWP_2023.xlsx  report_ALLEGHENY_ASPINWALL BORO_2015.xlsx  report_ALLEGHENY_ASPINWALL BORO_2016.xlsx  report_ALLEGHENY_ASPINWALL BORO_2017.xlsx  report_ALLEGHENY_ASPINWALL BORO_2018.xlsx  report_ALLEGHENY_ASPINWALL BORO_2019.xlsx  report_ALLEGHENY_ASPINWALL BORO_2020.xlsx  report_ALLEGHENY_ASPINWALL BORO_2021.xlsx  report_ALLEGHENY_ASPINWALL BORO_2022.xlsx  report_ALLEGHENY_ASPINWALL BORO_2023.xlsx  report_ALLEGHENY_AVALON BORO_2015.xlsx  report_ALLEGHENY_AVALON BORO_2016.xlsx  report_ALLEGHENY_AVALON BORO_2017.xlsx  report_ALLEGHENY_AVALON BORO_2018.xlsx  report_ALLEGHENY_AVALON BORO_2019.xlsx  report_ALLEGHENY_AVALON BORO_2020.xlsx  report_ALLEGHENY_AVALON BORO_2021.xlsx  report_ALLEGHENY_AVALON BORO_2022.xlsx  (+5944 more)
(+164 files in other folders)
