[project]
name = "pa-municipal-annual-financial-report-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright~=1.50.0",
    "pydantic~=2.10.6",
    "openpyxl~=3.1.5",
    "SQLAlchemy~=2.0.39",
    "alembic~=1.15.1",
    "RapidFuzz~=3.13.0",
    "psycopg2>=2.9.10",
    "polars>=1.33.0",
    "pandera>=0.26.1",
    "aiohttp>=3.12.15",
    "environs>=14.3.0",
]
